--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,42 +1,44 @@
-<h2>Por Pais</h2>
-<hr>
+<div class="animate__animated animate__fadeIn animate__faster">
 
-<div class="row">
-    <div class="col">
-        <form autocomplete="off" (ngSubmit)="buscar()">
-            <input [(ngModel)]="termino" type="text" name="termino" placeholder="Buscar pais..." class="form-control" />
-        </form>
+
+    <h2>Por Pais</h2>
+    <hr>
+
+    <div class="row">
+        <div class="col">
+
+            <app-pais-input (onEnter)="buscar( $event )  " (onDebounce)="sugerencias( $event ) " placeholder="Buscar pais..."></app-pais-input>
+
+        </div>
     </div>
+
+    <ul class="list-group" *ngIf="mostrarSugerencias">
+        <li class="list-group-item list-group-item-action" *ngFor="let pais of paisesSugeridos">
+            <a class="nav-link" [routerLink]="['/pais',pais.alpha2Code]">
+            {{ pais.name }}
+            </a>
+        </li>
+        <li class="list-group-item list-group-item-action" (click)="buscaSugerido( termino )">
+            <a class="nav-link">
+              Buscar "{{ termino }}"
+            </a>
+        </li>
+    </ul>
+
+
+
+    <hr>
+
 </div>
 
-<hr>
-<div class="alert alert-danger">
-    No se encontro nadita
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontro nada con el termino -> {{ termino }}
 </div>
 
-<div class="row">
+<div *ngIf="paises.length > 0" class="row">
     <div class="col">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th> # </th>
-                    <th> Bandera </th>
-                    <th> Nombre </th>
-                    <th> Poblacion </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>bandera</td>
-                    <td>nombre</td>
-                    <td>123456</td>
-                    <td>
-                        <a href="/pais/cri">Ver....</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+
     </div>
 </div>
