--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -4,4 +4,7 @@
     <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]=" {exact: true} " class="list-group-item">Buscar pais</li>
     <li routerLink="region" routerLinkActive="active" class="list-group-item">Por region</li>
     <li routerLink="capital" routerLinkActive="active" class="list-group-item">Por capital</li>
+    <hr>
+    <li routerLink="provincias" routerLinkActive="active" class="list-group-item">Por Provincias</li>
+
 </ul>
